# study_case

./: Dockerfile  README.md  config.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
